Custom--app/main/default/objects/Permit__c/Permit__c.object-meta.xml
<CustomObject>
    <description>This is part of the Rehab deployment.  Is used by the Rehab team to track permits required for a particular rehab.</description>
    <label>Permit</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Permits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>