Custom--app/main/default/objects/Permit__c/fields/Agency_Name_City__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name_City__c</fullName>
    <label>Agency Name/City</label>
    <length>155</length>
    <type>Text</type>
</CustomField>