Custom--app/main/default/objects/Permit__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>