Custom--app/main/default/objects/Permit__c/fields/Final_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Sign_Off_Date__c</fullName>
    <label>Final Sign-Off Date</label>
    <type>Date</type>
</CustomField>