Custom--app/main/default/objects/Permit__c/fields/Permit_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Request_Date__c</fullName>
    <label>Permit Request Date</label>
    <type>Date</type>
</CustomField>