Custom--app/main/default/objects/Permit__c/fields/Permit_Status__c.field-meta.xml
<CustomField>
    <fullName>Permit_Status__c</fullName>
    <label>Permit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>