Custom--app/main/default/objects/Permit__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>