Custom--app/main/default/objects/Permit__c/listViews/All_Permits.listView-meta.xml
<ListView>
    <fullName>All_Permits</fullName>
    <columns>NAME</columns>
    <columns>Permit_Type__c</columns>
    <columns>Agency_Name_City__c</columns>
    <columns>Contractor__c</columns>
    <columns>Permit_Status__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Permit_Request_Date__c</columns>
    <columns>Permit_Received_Date__c</columns>
    <columns>Final_Sign_Off_Date__c</columns>
    <columns>Fees__c</columns>
    <columns>Comments__c</columns>
    <columns>Rehab__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Permits</label>
</ListView>