Custom--app/main/default/objects/Permit__c/listViews/Permits_Pending.listView-meta.xml
<ListView>
    <fullName>Permits_Pending</fullName>
    <columns>NAME</columns>
    <columns>Rehab__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Permit_Type__c</columns>
    <columns>Permit_Status__c</columns>
    <columns>Permit_Received_Date__c</columns>
    <columns>Permit_Request_Date__c</columns>
    <columns>Final_Sign_Off_Date__c</columns>
    <columns>Contractor__c</columns>
    <columns>Agency_Name_City__c</columns>
    <columns>Fees__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permit_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Permits Pending</label>
</ListView>